# intelli-video

./: .gitignore  Makefile  README.md  config.py  main.py  out.vtt  pyproject.toml  requirements.txt  webui.py
core/: audio.py  client.py  downloader.py  prompts.py  schema.py  utils.py  video.py
